icv2.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "entertainment",
  "char_count": 3978,
  "classifier_probability": 0.81,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.54,
  "homepage_snapshot_redirected_domain": "icv2.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060407225507id_/http://www.icv2.com/index.html",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402221035id_/http%3A//icv2.com",
  "interval": "2006_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "icv2.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615042644id_/http%3A//www.icv2.com/other/privacy.html",
  "policy_title": "ICv2 - Privacy Statement",
  "policy_url": "icv2.com/other/privacy.html",
  "sha1": "bf4be90193ecc4b43ad1b43b11f1110605d6ec1d",
  "simhash": 13275298427946046113,
  "simhash_updated": false,
  "site_hostname": "icv2.com",
  "site_url": "http://icv2.com",
  "smog": 14.41,
  "strict_updated": false,
  "timestamp": "20060615042644",
  "word_count": 661,
  "year": 2006
}

--- a/i/ic/icv/icv2.com.html
+++ b/i/ic/icv/icv2.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the icv2.com privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210111737id_/http%3A//icv2.com/other/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the icv2.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615042644id_/http%3A//www.icv2.com/other/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>ICv2 - Privacy Statement</title>
@@ -91,7 +91,7 @@ GREEN:#669900
 <td bgcolor="#000000" align="LEFT" valign="MIDDLE" colspan="6">
 <span class="text2"><font color="GRAY">Click below to visit one of our sponsors</font></span><br>
 <img src="/images/decor/1pixel.gif" width="1" height="1"><br>
-<center><a href="http://www.icv2.com/phpAds/click.php3?bannerNum=458"><img src="http://www.icv2.com/phpAds/showbanner.php3?bannerID=458" border="0"></a></center>
+<center><a href="http://www.icv2.com/phpAds/click.php3?bannerNum=509"><img src="http://www.icv2.com/phpAds/showbanner.php3?bannerID=509" border="0"></a></center>
 </td>
 <td rowspan="2" valign="TOP"><img width="5" height="155" src="/images/decor/top_ad_sliver_right.gif" border="0"></td>
 </tr>
@@ -206,18 +206,19 @@ document.write(isnDays[today.getDay()]+", "+isnMonths[today.getMonth()]+" "+toda
 <a href="/search/search.html?q=Comics" class="side-text3">Comics</a><br>
 <a href="/search/search.html?q=Anime" class="side-text3">Anime</a><br>
 <a href="/search/search.html?q=Movies+TV" class="side-text3">Movies/TV</a><br>
-<a href="/search/search.html?q=Tokyopop" class="side-text3">Tokyopop</a><br>
 <a href="/search/search.html?q=Viz" class="side-text3">Viz</a><br>
-<a href="/search/search.html?q=FUNimation+Productions" class="side-text3">FUNimation Productions</a><br>
+<a href="/search/search.html?q=Bandai" class="side-text3">Bandai</a><br>
+<a href="/search/search.html?q=WizKids" class="side-text3">WizKids</a><br>
+<a href="/search/search.html?q=Digital+Manga" class="side-text3">Digital Manga</a><br>
 
 </td>
 <td width="50%">
 <a href="/search/search.html?q=Games" class="side-text3">Games</a><br>
 <a href="/search/search.html?q=Toys" class="side-text3">Toys</a><br>
-<a href="/search/search.html?q=Diamond" class="side-text3">Diamond</a><br>
+<a href="/search/search.html?q=Tokyopop" class="side-text3">Tokyopop</a><br>
 <a href="/search/search.html?q=Marvel" class="side-text3">Marvel</a><br>
+<a href="/search/search.html?q=DC" class="side-text3">DC</a><br>
 <a href="/search/search.html?q=Wizards+of+the+Coast" class="side-text3">Wizards of the Coast</a><br>
-<a href="/search/search.html?q=Crumb" class="side-text3">Crumb</a><br>
 
 </td>
 </tr>
@@ -251,8 +252,8 @@ document.write(isnDays[today.getDay()]+", "+isnMonths[today.getMonth()]+" "+toda
 <tbody><tr>
 <td align="LEFT">
 <center>
-<a href="http://www.icv2.com/articles/home/7838.html"><img src="/images/top10.JPG" align="BOTTOM" border="0"></a><br>
-<a href="http://www.icv2.com/articles/home/7838.html"><div class="side-text2">ICv2 Announces ICv2<br>Graphic Novel Conference<br>at New York Comic-Con</div></a>
+<a href="http://www.icv2.com/articles/home/8836.html"><img src="/images/top10.JPG" align="BOTTOM" border="0"></a><br>
+<a href="http://www.icv2.com/articles/home/8836.html"><div class="side-text2">ICv2 Releases Retailers<br>Guide to Games #11</div></a>
 </center>
 <br>
 <table border="0" cellpadding="3" cellspacing="0">
@@ -370,63 +371,63 @@ document.write(isnDays[today.getDay()]+", "+isnMonths[today.getMonth()]+" "+toda
 <table cellspacing="0" cellpadding="1" border="0">
 <tbody><tr>
 <td valign="top"><img width="6" height="10" src="/images/decor/bullet_green.gif" border="0"></td>
-<td valign="top"><a href="/articles/news/7928.html" class="side-text2">Del Rey Shrinkwrapping Mature Titles</a></td>
+<td valign="top"><a href="/articles/news/8840.html" class="side-text2">Snakes on the Shelves!</a></td>
 </tr>
 <tr>
 <td valign="top"><img width="6" height="10" src="/images/decor/bullet_green.gif" border="0"></td>
-<td valign="top"><a href="/articles/news/7927.html" class="side-text2">Gonzo 'Witchblade' Anime Set</a></td>
+<td valign="top"><a href="/articles/news/8838.html" class="side-text2">Scholastic Plans 'Breaking Up'</a></td>
 </tr>
 <tr>
 <td valign="top"><img width="6" height="10" src="/images/decor/bullet_green.gif" border="0"></td>
-<td valign="top"><a href="/articles/news/7926.html" class="side-text2">Tim Truman to Write 'Conan' Comic</a></td>
+<td valign="top"><a href="/articles/news/8833.html" class="side-text2">'Serenity RPG' Back to Press</a></td>
 </tr>
 <tr>
 <td valign="top"><img width="6" height="10" src="/images/decor/bullet_green.gif" border="0"></td>
-<td valign="top"><a href="/articles/news/7925.html" class="side-text2">Pokemon USA in Charge</a></td>
+<td valign="top"><a href="/articles/news/8835.html" class="side-text2">ICv2 Top 10 Most Powerful </a></td>
 </tr>
 <tr>
 <td valign="top"><img width="6" height="10" src="/images/decor/bullet_green.gif" border="0"></td>
-<td valign="top"><a href="/articles/news/7924.html" class="side-text2">Sabertooth Games' April &amp; May Releases</a></td>
+<td valign="top"><a href="/articles/news/8837.html" class="side-text2">Mattel Masters Cartoon Network</a></td>
 </tr>
 <tr>
 <td valign="top"><img width="6" height="10" src="/images/decor/bullet_green.gif" border="0"></td>
-<td valign="top"><a href="/articles/news/7918.html" class="side-text2">Battle of the Fantasy Heavyweights</a></td>
+<td valign="top"><a href="/articles/news/8834.html" class="side-text2">Two Simpsons Boxes Announced</a></td>
 </tr>
 <tr>
 <td valign="top"><img width="6" height="10" src="/images/decor/bullet_green.gif" border="0"></td>
-<td valign="top"><a href="/articles/news/7919.html" class="side-text2">Full Metal Alchemist TCG Leagues</a></td>
+<td valign="top"><a href="/articles/news/8836.html" class="side-text2">ICv2 Releases 'ICv2 Retailers Guide to Games' #11</a></td>
 </tr>
 <tr>
 <td valign="top"><img width="6" height="10" src="/images/decor/bullet_green.gif" border="0"></td>
-<td valign="top"><a href="/articles/news/7917.html" class="side-text2">Warren Ellis Reboots the 'New Universe'</a></td>
+<td valign="top"><a href="/articles/news/8830.html" class="side-text2">FUNimation Gets Black Cat</a></td>
 </tr>
 <tr>
 <td valign="top"><img width="6" height="10" src="/images/decor/bullet_green.gif" border="0"></td>
-<td valign="top"><a href="/articles/news/7921.html" class="side-text2">A Look at 'Xiaolin Showdown' Figures</a></td>
+<td valign="top"><a href="/articles/news/8828.html" class="side-text2">Osprey Plans Graphic History Line</a></td>
 </tr>
 <tr>
 <td valign="top"><img width="6" height="10" src="/images/decor/bullet_green.gif" border="0"></td>
-<td valign="top"><a href="/articles/news/7920.html" class="side-text2">'Bokko' Manga Is Source for Live Action Epic</a></td>
+<td valign="top"><a href="/articles/news/8829.html" class="side-text2">Tenacious Games Lays Plans </a></td>
 </tr>
 <tr>
 <td valign="top"><img width="6" height="10" src="/images/decor/bullet_green.gif" border="0"></td>
-<td valign="top"><a href="/articles/news/7922.html" class="side-text2">Russian to Direct 'Wanted'</a></td>
+<td valign="top"><a href="/articles/news/8831.html" class="side-text2">Hidden City Gets 'Bella Sara'</a></td>
 </tr>
 <tr>
 <td valign="top"><img width="6" height="10" src="/images/decor/bullet_green.gif" border="0"></td>
-<td valign="top"><a href="/articles/news/7908.html" class="side-text2">Interview with Viz Media VP Liza Coppola, Part 1</a></td>
+<td valign="top"><a href="/articles/news/8827.html" class="side-text2">Comics Join Best American Series</a></td>
 </tr>
 <tr>
 <td valign="top"><img width="6" height="10" src="/images/decor/bullet_green.gif" border="0"></td>
-<td valign="top"><a href="/articles/news/7909.html" class="side-text2">Interview with Viz Media VP Liza Coppola, Part 2</a></td>
+<td valign="top"><a href="/articles/news/8822.html" class="side-text2">New Kolchak Prose Collection</a></td>
 </tr>
 <tr>
 <td valign="top"><img width="6" height="10" src="/images/decor/bullet_green.gif" border="0"></td>
-<td valign="top"><a href="/articles/news/7916.html" class="side-text2">Devil Girl Hot Kisses Price Cut</a></td>
+<td valign="top"><a href="/articles/news/8821.html" class="side-text2">'AvP 2' Gets Director</a></td>
 </tr>
 <tr>
 <td valign="top"><img width="6" height="10" src="/images/decor/bullet_green.gif" border="0"></td>
-<td valign="top"><a href="/articles/news/7912.html" class="side-text2">Interview with Viz Media VP Liza Coppola, Part 4</a></td>
+<td valign="top"><a href="/articles/news/8824.html" class="side-text2">Boom Comic Gets Movie Deal</a></td>
 </tr>
 
 </tbody></table>
@@ -543,7 +544,7 @@ document.write(isnDays[today.getDay()]+", "+isnMonths[today.getMonth()]+" "+toda
 <td valign="BOTTOM"><img width="478" height="18" src="/images/decor/bottom_ad_top.gif" border="0"></td>
 </tr>
 <tr>
-<td bgcolor="#000000" align="CENTER" valign="MIDDLE"><a href="http://www.icv2.com/phpAds/click.php3?bannerNum=458"><img src="http://www.icv2.com/phpAds/showbanner.php3?bannerID=458" border="0"></a></td>
+<td bgcolor="#000000" align="CENTER" valign="MIDDLE"><a href="http://www.icv2.com/phpAds/click.php3?bannerNum=509"><img src="http://www.icv2.com/phpAds/showbanner.php3?bannerID=509" border="0"></a></td>
 </tr>
 </tbody></table>
 </td>
