--- a/c/cv/cv-/cv-library.co.uk.html
+++ b/c/cv/cv-/cv-library.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cv-library.co.uk privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231194955id_/http%3A//cv-library.co.uk/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cv-library.co.uk privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615042942id_/http%3A//www.cv-library.co.uk/privacy.html) for the most accurate reproduction.-->
 
 <html><head><title>CV-library.co.uk - UK jobs, Careers, Recruitment</title><meta name="keywords" content="job,jobs,job search,uk jobs,jobs in uk,career,careers,sales jobs,IT jobs,engineering jobs,employment,curriculum vitae,cv-library,cv-library.co.uk,cv database,recruitment,cv,job board,accounting,communications,construction,engineering,human resources,hr,IT,i.t.,sales,technical, telecommunications,trades"><meta name="description" content="CV-library.co.uk - Submit your CV on-line for potential Employers/Recruiters to browse through at their leisure. Search jobs, UK jobs, Jobs-by-email">
 <style type="text/css">
@@ -11,35 +11,35 @@ A:Hover {color: #aa0000; text-decoration: underline}
 <!-- top logos -->
 <table border="0" cellspacing="0" cellpadding="0" width="750" align="center" bgcolor="#1A337A">
  <tbody><tr>
-  <td align="left" width="275" height="80" bgcolor="1B337B"><img src="/images/newstyle/logo.gif" height="80" width="275" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
-  <td align="left" width="409" height="80" bgcolor="1B337B"><img src="/images/newstyle/rotate_text01.gif" height="80" width="409" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
- <td align="left" width="66" height="80" bgcolor="1B337B"><img src="/images/newstyle/curl.gif" height="80" width="66" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
+  <td align="left" width="275" height="80" bgcolor="1B337B"><img src="/images/newstyle/logo.gif" height="80" width="275" alt="CV-library.co.uk Logo"></td>
+  <td align="left" width="409" height="80" bgcolor="1B337B"><img src="/images/newstyle/rotate_text01.gif" height="80" width="409" alt="UK Jobs, Search Jobs"></td>
+ <td align="left" width="66" height="80" bgcolor="1B337B"><img src="/images/newstyle/curl.gif" height="80" width="66"></td>
 </tr>
 </tbody></table>
 
 <!-- 1px bar -->
 <table border="0" cellspacing="0" cellpadding="0" width="750" align="center">
  <tbody><tr>
-  <td colspan="3" height="1" bgcolor="1B337B"><img src="/images/akiko/header_bar_horizontal.gif" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
+  <td colspan="3" height="1" bgcolor="1B337B"><img src="/images/akiko/header_bar_horizontal.gif"></td>
  </tr>
 </tbody></table>
 
 <!-- tabs -->
 <table width="750" border="0" cellpadding="0" cellspacing="0" align="center">
  <tbody><tr height="28">
-  <td align="center" width="18" bgcolor="1B337B"><img src="/images/akiko/header_curve_left.gif" height="28" width="18" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
+  <td align="center" width="18" bgcolor="1B337B"><img src="/images/akiko/header_curve_left.gif" height="28" width="18" alt="UK Jobs"></td>
   <td align="center" valign="middle" width="81" bgcolor="1B337B"><a style="text-decoration:none;color:FFFFFF" href="/index.html"><font face="Verdana" style="font-size:10pt;font-weight:bold">Home</font></a></td>
-  <td align="center" width="1" bgcolor="1B337B"><img src="/images/akiko/header_bar_vertical.gif" height="28" width="1" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
+  <td align="center" width="1" bgcolor="1B337B"><img src="/images/akiko/header_bar_vertical.gif" height="28" width="1" alt="UK Jobs"></td>
   <td align="center" valign="middle" width="88" bgcolor="1B337B"><a style="text-decoration:none;color:FFFFFF" href="/accounts.html"><font face="Verdana" style="font-size:10pt;font-weight:bold">Login</font></a></td>
-  <td align="center" width="1" bgcolor="1B337B"><img src="/images/akiko/header_bar_vertical.gif" height="28" width="1" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
+  <td align="center" width="1" bgcolor="1B337B"><img src="/images/akiko/header_bar_vertical.gif" height="28" width="1" alt="Register CV"></td>
   <td align="center" valign="middle" nowrap="" bgcolor="1B337B">  <a style="text-decoration:none;color:FFFFFF" href="/cgi-bin/create.cgi"><font face="Verdana" style="font-size:10pt;font-weight:bold">Register your CV</font></a></td>
-  <td align="center" width="1" bgcolor="1B337B"><img src="/images/akiko/header_bar_vertical.gif" height="28" width="1" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
+  <td align="center" width="1" bgcolor="1B337B"><img src="/images/akiko/header_bar_vertical.gif" height="28" width="1" alt="Search UK Jobs"></td>
   <td align="center" valign="middle" width="128" bgcolor="1B337B"><a style="text-decoration:none;color:FFFFFF" href="/cgi-bin/searchjobs.cgi"><font face="Verdana" style="font-size:10pt;font-weight:bold">Search jobs</font></a></td>
-  <td align="center" width="1" bgcolor="1B337B"><img src="/images/akiko/header_bar_vertical.gif" height="28" width="1" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
+  <td align="center" width="1" bgcolor="1B337B"><img src="/images/akiko/header_bar_vertical.gif" height="28" width="1" alt="Search CVs"></td>
   <td align="center" valign="middle" width="124" bgcolor="1B337B"><a style="text-decoration:none;color:FFFFFF" href="/cgi-bin/quicksearch.cgi"><font face="Verdana" style="font-size:10pt;font-weight:bold">CV Search</font></a></td>
-  <td align="center" width="1" bgcolor="1B337B"><img src="/images/akiko/header_bar_vertical.gif" height="28" width="1" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
+  <td align="center" width="1" bgcolor="1B337B"><img src="/images/akiko/header_bar_vertical.gif" height="28" width="1" alt="Contact Us"></td>
   <td align="center" valign="middle" width="114" bgcolor="1B337B"><a style="text-decoration:none;color:FFFFFF" href="/cgi-bin/contact.cgi"><font face="Verdana" style="font-size:10pt;font-weight:bold">Contact us</font></a></td>  
-  <td align="center" width="18" bgcolor="1B337B"><img src="/images/akiko/header_curve_right.gif" height="28" width="18" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
+  <td align="center" width="18" bgcolor="1B337B"><img src="/images/akiko/header_curve_right.gif" height="28" width="18" alt="Jobs"></td>
 </tr></tbody></table>
 
 <!-- spacer -->
@@ -52,19 +52,20 @@ A:Hover {color: #aa0000; text-decoration: underline}
 <!-- stats bar -->
 <table width="750" border="0" cellpadding="0" cellspacing="0" align="center">
  <tbody><tr>
-  <td height="27" width="9" bgcolor="1B337B"><img src="/images/akiko/stats_bar_curve_left.gif" height="27" width="9" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
-  <td height="27" width="250" bgcolor="1B337B" align="left" valign="middle"><font face="Verdana" style="font-size:7pt;color:FFFFFF">&nbsp;&nbsp; Saturday  December 31 2005  19:49:48</font></td> 
+  <td height="27" width="9" bgcolor="1B337B"><img src="/images/akiko/stats_bar_curve_left.gif" height="27" width="9"></td>
+  <td height="27" width="250" bgcolor="1B337B" align="left" valign="middle"><font face="Verdana" style="font-size:7pt;color:FFFFFF">&nbsp;&nbsp; Thursday  June 15 2006  05:29:41</font></td> 
   <td height="27" bgcolor="1B337B">&nbsp;</td> 
-  <td height="27" width="145" bgcolor="1B337B" align="right" valign="middle"><font face="Verdana" style="font-size:7pt;color:FFFFFF"><a href="/cgi-bin/searchjobs.cgi" style="text-decoration:none;color:FFFFFF">19,345  Live Vacancies</a>&nbsp;&nbsp;&nbsp;&nbsp;</font></td>
-  <td height="27" width="1" bgcolor="1B337B"><img src="/images/akiko/stats_bar_vertical.gif" height="27" width="1" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
-  <td height="27" width="123" bgcolor="1B337B" align="left" valign="middle"><font face="Verdana" style="font-size:7pt;color:FFFFFF">&nbsp;&nbsp;&nbsp;&nbsp;<a href="/search" style="text-decoration:none;color:FFFFFF">301,993  Live CVs</a></font></td> 
-  <td height="27" width="9" bgcolor="1B337B" align="right"><img src="/images/akiko/stats_bar_curve_right.gif" height="27" width="9" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
+  <td height="27" width="145" bgcolor="1B337B" align="right" valign="middle"><font face="Verdana" style="font-size:7pt;color:FFFFFF"><a href="/cgi-bin/searchjobs.cgi" style="text-decoration:none;color:FFFFFF">24,856  Live UK Jobs</a>&nbsp;&nbsp;&nbsp;&nbsp;</font></td>
+  <td height="27" width="1" bgcolor="1B337B"><img src="/images/akiko/stats_bar_vertical.gif" height="27" width="1" alt="CV Database, Search CVs"></td>
+  <td height="27" width="123" bgcolor="1B337B" align="left" valign="middle"><font face="Verdana" style="font-size:7pt;color:FFFFFF">&nbsp;&nbsp;&nbsp;&nbsp;<a href="/search" style="text-decoration:none;color:FFFFFF">373,702  Live CVs</a></font></td> 
+  <td height="27" width="9" bgcolor="1B337B" align="right"><img src="/images/akiko/stats_bar_curve_right.gif" height="27" width="9"></td>
  </tr>
 </tbody></table>
 
 <table border="0" cellpadding="0" cellspacing="0" align="center" width="750">
  <tbody><tr>
   <td>
+
 
 
 
@@ -90,19 +91,21 @@ A:Hover {color: #aa0000; text-decoration: underline}
 <!-- footer bar -->
 <table width="750" border="0" cellpadding="0" cellspacing="0" align="center">
  <tbody><tr>
-  <td height="27" width="9" bgcolor="1B337B"><img src="/images/akiko/footer_bar_curve_left.gif" height="27" width="9" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
-  <td height="27" bgcolor="1B337B" align="left" valign="middle"><font face="Verdana" style="font-size:7pt;color:FFFFFF;font-weight:bold">©2000-2005 CV-library Ltd. All rights reserved.</font></td> 
-  <td height="27" bgcolor="1B337B" width="110">&nbsp;</td> 
+  <td height="27" width="9" bgcolor="1B337B"><img src="/images/akiko/footer_bar_curve_left.gif" height="27" width="9"></td>
+  <td height="27" bgcolor="1B337B" align="left" valign="middle"><font face="Verdana" style="font-size:7pt;color:FFFFFF;font-weight:bold">©2000-2006 CV-library Ltd. All rights reserved.</font></td> 
+  <td height="27" bgcolor="1B337B" width="70">&nbsp;</td> 
   <td height="27" bgcolor="1B337B" align="center" valign="middle"><font face="Verdana" style="font-size:7pt;color:FFFFFF;font-weight:bold"><a href="/" style="text-decoration:none;color:FFFFFF">Home</a>&nbsp;&nbsp;</font></td>
-  <td height="27" width="1" bgcolor="1B337B"><img src="/images/akiko/footer_bar_vertical.gif" height="27" width="1" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
+  <td height="27" width="1" bgcolor="1B337B"><img src="/images/akiko/footer_bar_vertical.gif" height="27" width="1" alt="UK Jobs"></td>
   <td height="27" bgcolor="1B337B" align="center" valign="middle"><font face="Verdana" style="font-size:7pt;color:FFFFFF;font-weight:bold">&nbsp;&nbsp;<a href="/cgi-bin/contact.cgi" style="text-decoration:none;color:FFFFFF">Contact us</a>&nbsp;&nbsp;</font></td>
-  <td height="27" width="1" bgcolor="1B337B"><img src="/images/akiko/footer_bar_vertical.gif" height="27" width="1" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
+  <td height="27" width="1" bgcolor="1B337B"><img src="/images/akiko/footer_bar_vertical.gif" height="27" width="1" alt="Contact Us"></td>
   <td height="27" bgcolor="1B337B" align="center" valign="middle"><font face="Verdana" style="font-size:7pt;color:FFFFFF;font-weight:bold">&nbsp;&nbsp;<a href="/search-jobs.html" style="text-decoration:none;color:FFFFFF">Search Jobs</a>&nbsp;&nbsp;</font></td>
-  <td height="27" width="1" bgcolor="1B337B"><img src="/images/akiko/footer_bar_vertical.gif" height="27" width="1" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
+  <td height="27" width="1" bgcolor="1B337B"><img src="/images/akiko/footer_bar_vertical.gif" height="27" width="1" alt="Terms &amp; Conditions"></td>
   <td height="27" bgcolor="1B337B" align="center" valign="middle"><font face="Verdana" style="font-size:7pt;color:FFFFFF;font-weight:bold">&nbsp;&nbsp;<a href="/terms.html" style="text-decoration:none;color:FFFFFF" target="_new">Terms &amp; Conditions</a>&nbsp;&nbsp;</font></td>
-  <td height="27" width="1" bgcolor="1B337B"><img src="/images/akiko/footer_bar_vertical.gif" height="27" width="1" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
+  <td height="27" width="1" bgcolor="1B337B"><img src="/images/akiko/footer_bar_vertical.gif" height="27" width="1" alt="Privacy"></td>
   <td height="27" bgcolor="1B337B" align="center" valign="middle"><font face="Verdana" style="font-size:7pt;color:FFFFFF;font-weight:bold">&nbsp;&nbsp;<a href="/privacy.html" style="text-decoration:none;color:FFFFFF" target="_new">Privacy Policy</a>&nbsp;&nbsp;</font></td>
-  <td height="27" width="9" bgcolor="1B337B"><img src="/images/akiko/footer_bar_curve_right.gif" height="27" width="9" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
+  <td height="27" width="1" bgcolor="1B337B"><img src="/images/akiko/footer_bar_vertical.gif" height="27" width="1" alt="Privacy"></td>
+  <td height="27" bgcolor="1B337B" align="center" valign="middle"><font face="Verdana" style="font-size:7pt;color:FFFFFF;font-weight:bold">&nbsp;&nbsp;<a href="/" style="text-decoration:none;color:FFFFFF">UK Jobs</a>&nbsp;&nbsp;</font></td>
+  <td height="27" width="9" bgcolor="1B337B"><img src="/images/akiko/footer_bar_curve_right.gif" height="27" width="9"></td>
  </tr>
 </tbody></table>
 
@@ -116,12 +119,13 @@ A:Hover {color: #aa0000; text-decoration: underline}
 <!-- footer lower bar -->
 <table width="750" border="0" cellpadding="0" cellspacing="0" align="center">
  <tbody><tr>
-  <td height="49" width="19" bgcolor="1B337B"><img src="/images/akiko/footer_lowerbar_curve_left.gif" height="49" width="19" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></td>
+  <td height="49" width="19" bgcolor="1B337B"><img src="/images/akiko/footer_lowerbar_curve_left.gif" height="49" width="19"></td>
   <td height="49" bgcolor="1B337B">&nbsp;</td> 
-  <td height="49" width="140" bgcolor="1B337B" align="right"><a href="/index.html"><img src="/images/akiko/footer_lowerbar_curve_right.gif" height="49" width="140" border="0" alt="CV-library.co.uk - UK jobs, Careers, Recruitment"></a></td>
+  <td height="49" width="140" bgcolor="1B337B" align="right"><a href="/index.html"><img src="/images/akiko/footer_lowerbar_curve_right.gif" height="49" width="140" border="0" alt="UK Jobs"></a></td>
  </tr>
 </tbody></table>
 <br>
+
 
 
 
