--- a/l/la/lav/lavalys.com.html
+++ b/l/la/lav/lavalys.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lavalys.com privacy policy that was archived on 2005-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051220101942id_/http%3A//www.lavalys.com/privacy.php%3Flang%3Den) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lavalys.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615043022id_/http%3A//lavalys.com/privacy.php%3Flang%3Den) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Lavalys - Comprehensive IT Security and Management</title>
@@ -104,11 +104,16 @@ document[changeImages.arguments[i]].src = eval(changeImages.arguments[i+1] + ".s
 <td height="100%" align="RIGHT" valign="TOP" background="/images/design/page_rightborder.gif"><img src="/images/design/page_rightside.gif" width="4" height="117"></td></tr>
 </tbody></table></td></tr>
 <tr align="CENTER" bgcolor="#5B8ECC">
-<td class="COPYRIGHT">Copyright © 2003 - 2005 Lavalys Consulting Group, Inc. All rights reserved.</td></tr>
+<td class="COPYRIGHT">Copyright © 2003 - 2006 Lavalys Consulting Group, Inc. All rights reserved.</td></tr>
 <tr><td height="6"></td></tr>
 <tr align="CENTER"><td class="menu"><a href="/index.php?lang=en" target="_parent">Home</a> | <a href="/news.php?lang=en">News &amp; Events</a> | <a href="/products.php?lang=en" target="_parent">Products</a> | <a href="/purchase.php?lang=en" target="_parent">Purchase</a> | <a href="/support.php?lang=en" target="_parent">Support</a> | <a href="/partners.php?lang=en" target="_parent">Partners</a> | <a href="/about.php?lang=en" target="_parent">About Us</a> | <a href="/terms.php?lang=en">Terms of Use</a> | <a href="/privacy.php?lang=en" target="_parent">Privacy Statement</a></td></tr>
 </tbody></table></td></tr></tbody></table>
-
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-313043-2";
+urchinTracker();
+</script>
 
 
 </body></html>
