--- a/s/so/sou/southwest.com.html
+++ b/s/so/sou/southwest.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the southwest.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230025434id_/http%3A//www.southwest.com/travel_center/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the southwest.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615043055id_/http%3A//southwest.com/travel_center/privacy_policy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Southwest Airlines Privacy Policy</title>
