--- a/k/ku/kut/kutztown.edu.html
+++ b/k/ku/kut/kutztown.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the kutztown.edu privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218130730id_/http%3A//www.kutztown.edu/privacy/index.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kutztown.edu privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615043232id_/http%3A//www.kutztown.edu/privacy/index.shtml) for the most accurate reproduction.-->
 
 <html lang="en"><head>
 <title>Welcome to Kutztown University - Privacy Statement</title>
@@ -238,7 +238,7 @@ function MM_openBrWindow(theURL,winName,features) { //v1.2
 			<a href="http://www.kutztown.edu/bookstore.shtml" alt="Click here for Bookstore">Bookstore</a><br>
 			<a href="http://www.kutztown.edu/about/campusmap/" alt="Click here for Campus Tour/Map">Campus Tour/Map</a><br>
 			<a href="http://www.kutztown.edu/admin/careers/" alt="Click here for Career Services">Career Services</a><br>
-			<a href="http://www.kutztown.edu/academics/learning/index.shtml" alt="Click here for Center of Lifelong Leanring">Center of Lifelong Leanring</a><br>
+			<a href="http://www.kutztown.edu/academics/learning/index.shtml" alt="Click here for Center of Lifelong Leanring">Center of Lifelong Learning</a><br>
 			<a href="http://www.kutztown.edu/computing.shtml" alt="Click here for Computing">Computing</a><br>
 			<a href="http://www.kutztown.edu/academics/onlinecatalog/" alt="Click here for Course Catalog">Course Catalog</a><br>
 			<a href="http://www.kutztown.edu/studentservices/" alt="Click here for Courses Offered">Courses Offered</a><br>
@@ -264,7 +264,7 @@ function MM_openBrWindow(theURL,winName,features) { //v1.2
 			<a href="http://www.kutztown.edu/academics/business/sbdc.shtml" alt="Click here for SBDC">SBDC</a><br>
 			<a href="http://www.kutztown.edu/admin/studaff/index.shtml" alt="Click here for Student Life">Student Services and Campus Life</a><br>
 			<a href="http://www.kutztown.edu/summerschool/" alt="Click here for Summer School">Summer School</a><br>
-			<a href="https://portal.kutztown.edu/bursar/index.asp" alt="Click here for Tution">Tution</a><br>
+			<a href="https://portal.kutztown.edu/bursar/index.asp" alt="Click here for Tution">Tuition</a><br>
 			<a href="http://www.kutztown.edu/academics/onlinecatalog/" alt="Click here for Undergraduate Catalog">Undergraduate Catalog</a><br>
 			<a href="http://www.kutztown.edu/weather/" alt="Click here for Weather Report">Weather Report</a><br>
 		</td>
