--- a/h/ho/hos/hospitalitynet.org.html
+++ b/h/ho/hos/hospitalitynet.org.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the hospitalitynet.org privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218174329id_/http%3A//www.hospitalitynet.org/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hospitalitynet.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615043729id_/http%3A//www.hospitalitynet.org/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <!--
 
-Page generated: 29 October 2004, 00:22:03 CEST (18925)
-0.083118 wallclock secs ( 0.01 usr +  0.00 sys =  0.01 CPU)
+Page generated: 10 May 2006, 10:51:31 CEST (17303)
+0.0129259 wallclock secs ( 0.01 usr +  0.00 sys =  0.01 CPU)
 
 
 
@@ -21,6 +21,15 @@ Page generated: 29 October 2004, 00:22:03 CEST (18925)
 <script language="javascript">
 
 //   window.name = 'mainWindow';
+
+   function setVariables(){
+    if (navigator.appName == "Netscape") {
+    v=".top=";dS="document.";sD="";y="window.pageYOffset"
+   }
+    else {v=".pixelTop=";dS="";sD=".style";y="document.body.scrollTop"}}
+    function checkLocation(){
+    object="object1";yy=eval(y);eval(dS+object+sD+v+yy);setTimeout("checkLocation()",10)
+   }
 
    function show() {
    all.style.display="block";
@@ -85,23 +94,23 @@ Page generated: 29 October 2004, 00:22:03 CEST (18925)
 
    </script>
 </head>
-<body bgcolor="#250505" marginheight="0" marginwidth="0" topmargin="0" leftmargin="0" onload="MM_preloadImages('/pics/buttons/previous_over.gif','/pics/buttons/index_over.gif','/pics/buttons/next_over.gif','/pics/buttons/t_contributeyournews2.gif','/pics/buttons/t_contactus1.gif','/pics/buttons/t_becomeareguser2.gif','/pics/mail_over.gif','/pics/print_over.gif')">
+<body bgcolor="#250505" marginheight="0" marginwidth="0" topmargin="0" leftmargin="0" onload="MM_preloadImages('/pics/buttons/previous_over.gif','/pics/buttons/index_over.gif','/pics/buttons/next_over.gif','/pics/buttons/t_contributeyournews2.gif','/pics/buttons/t_contactus1.gif','/pics/buttons/t_becomeareguser2.gif','/pics/mail_over.gif','/pics/print_over.gif');setVariables();checkLocation();">
 <div align="center">
 <a name="top"></a><table border="0" cellpadding="0" cellspacing="0" height="100%"><tbody><tr>
 <td valign="top" align="left" width="176" bgcolor="#625a5a" class="class"><div align="center">
 <a href="/index.html" onmouseover="window.status='Homepage'; return true" onmouseout="window.status=''"><img src="/pics/logo.gif" width="176" height="114" border="0"></a><table border="0" cellpadding="0" cellspacing="0" width="176"><tbody><tr>
 <td width="10"></td>
 <td>
-<br><span class="menu"><a href="/index.html" class="menulink" onmouseover="window.status='Home'; return true" onmouseout="window.status=''">HOME</a><br><a href="/news/index.html" class="menulink" onmouseover="window.status='Industry News'; return true" onmouseout="window.status=''">INDUSTRY NEWS</a><br><a href="/list/1-10/154000355.html" class="menulink" onmouseover="window.status='Financial News'; return true" onmouseout="window.status=''">FINANCIAL NEWS</a><br><a href="/reports/index.html" class="menulink" onmouseover="window.status='Market Reports'; return true" onmouseout="window.status=''">MARKET REPORTS</a><br><a href="/columns/index.html" class="menulink" onmouseover="window.status='Columns'; return true" onmouseout="window.status=''">COLUMNS</a><br><a href="/associationupdate/index.html" class="menulink" onmouseover="window.status='Association Update'; return true" onmouseout="window.status=''">ASSOCIATION UPDATE</a><br><a href="/list/1-10/154000437.html" class="menulink" onmouseover="window.status='Captured'; return true" onmouseout="window.status=''">CAPTURED</a><br><a href="/list/1-10/154000356.html" class="menulink" onmouseover="window.status='MultiMedia'; return true" onmouseout="window.status=''">MULTIMEDIA</a><br><a href="/list/1-10/154000357.html" class="menulink" onmouseover="window.status='Indepth'; return true" onmouseout="window.status=''">INDEPTH</a><br><a href="/opportunity/index.html" class="menulink" onmouseover="window.status='Job Opportunities'; return true" onmouseout="window.status=''">JOB OPPORTUNITIES</a><br><a href="/demand/index.html" class="menulink" onmouseover="window.status='Job Demands'; return true" onmouseout="window.status=''">JOB DEMANDS</a><br><a href="/marketplace/index.html" class="menulink" onmouseover="window.status='MarketPlace'; return true" onmouseout="window.status=''">   MARKETPLACE</a><br><a href="/hotelschools.html" class="menulink" onmouseover="window.status='Hotelschools'; return true" onmouseout="window.status=''">HOTELSCHOOLS</a><br><a href="/web/index.html" class="menulink" onmouseover="window.status='Industry Links'; return true" onmouseout="window.status=''">INDUSTRY LINKS</a><br><a href="/event/index.html" class="menulink" onmouseover="window.status='Industry Events'; return true" onmouseout="window.status=''">INDUSTRY EVENTS</a><br><a href="/list/1-10/154000366.html" class="menulink" onmouseover="window.status='Documents &amp; Presentations'; return true" onmouseout="window.status=''">DOCUMENTS</a><br><a href="/book/index.html" class="menulink" onmouseover="window.status='BookShelf'; return true" onmouseout="window.status=''">BOOKSHELF</a><br><a href="/list/1-10/154000530.html" class="menulink" onmouseover="window.status='Past Polls'; return true" onmouseout="window.status=''">PAST POLLS</a><br><a href="/list/1-10/154000369.html" class="menulink" onmouseover="window.status='Hotel Comics'; return true" onmouseout="window.status=''">OTHELLO</a><br><a href="/rss.html" class="menulink" onmouseover="window.status='RSS Feed'; return true" onmouseout="window.status=''">RSS FEED (XML)</a></span><br><hr color="#4f4f4f">
+<br><span class="menu"><a href="/index.html" class="menulink" onmouseover="window.status='Home'; return true" onmouseout="window.status=''">HOME</a><br><a href="/news/index.html" class="menulink" onmouseover="window.status='Industry News'; return true" onmouseout="window.status=''">INDUSTRY NEWS</a><br><a href="/list/1-10/154000355.html" class="menulink" onmouseover="window.status='Financial News'; return true" onmouseout="window.status=''">FINANCIAL NEWS</a><br><a href="/reports/index.html" class="menulink" onmouseover="window.status='Market Reports'; return true" onmouseout="window.status=''">MARKET REPORTS</a><br><a href="/columns/index.html" class="menulink" onmouseover="window.status='Columns'; return true" onmouseout="window.status=''">COLUMNS</a><br><a href="/associationupdate/index.html" class="menulink" onmouseover="window.status='Association Update'; return true" onmouseout="window.status=''">ASSOCIATION UPDATE</a><br><a href="/list/1-10/154000437.html" class="menulink" onmouseover="window.status='Captured'; return true" onmouseout="window.status=''">CAPTURED</a><br><a href="/list/1-10/154000356.html" class="menulink" onmouseover="window.status='MultiMedia'; return true" onmouseout="window.status=''">MULTIMEDIA</a><br><a href="/list/1-10/154000357.html" class="menulink" onmouseover="window.status='Indepth'; return true" onmouseout="window.status=''">INDEPTH</a><br><a href="/list/1-10/154000550.html" class="menulink" onmouseover="window.status='Job Opportunities'; return true" onmouseout="window.status=''">JOB OPPORTUNITIES</a><br><a href="/list/1-10/154000546.html" class="menulink" onmouseover="window.status='Job Demands'; return true" onmouseout="window.status=''">JOB DEMANDS</a><br><a href="/marketplace/index.html" class="menulink" onmouseover="window.status='MarketPlace'; return true" onmouseout="window.status=''">   MARKETPLACE</a><br><a href="/hotelschools.html" class="menulink" onmouseover="window.status='Hotelschools'; return true" onmouseout="window.status=''">HOTELSCHOOLS</a><br><a href="/web/index.html" class="menulink" onmouseover="window.status='Industry Links'; return true" onmouseout="window.status=''">INDUSTRY LINKS</a><br><a href="/event/index.html" class="menulink" onmouseover="window.status='Industry Events'; return true" onmouseout="window.status=''">INDUSTRY EVENTS</a><br><a href="/list/1-10/154000366.html" class="menulink" onmouseover="window.status='Documents &amp; Presentations'; return true" onmouseout="window.status=''">DOCUMENTS</a><br><a href="/book/index.html" class="menulink" onmouseover="window.status='BookShelf'; return true" onmouseout="window.status=''">BOOKSHELF</a><br><a href="/list/1-10/154000530.html" class="menulink" onmouseover="window.status='Past Polls'; return true" onmouseout="window.status=''">PAST POLLS</a><br><a href="/list/1-10/154000369.html" class="menulink" onmouseover="window.status='Hotel Comics'; return true" onmouseout="window.status=''">OTHELLO</a><br><a href="/rss.html" class="menulink" onmouseover="window.status='RSS Feed'; return true" onmouseout="window.status=''">RSS FEED (XML)</a><br><a href="/msn.html" class="menulink" onmouseover="window.status='RSS Feed'; return true" onmouseout="window.status=''">MICROSOFT® ALERTS</a></span><br><hr color="#4f4f4f">
 <form method="post" name="menusearch" action="/search.html">
 <span class="menu">SEARCH</span><br><input type="hidden" name="search" value="yes"><input type="hidden" name="first" value="1"><input type="hidden" name="last" value="10"><input type="hidden" name="searchperiod" value=""><input type="hidden" name="order" value=""><input name="query" size="15"> <span class="menu"><a href="javascript:document.menusearch.submit()" class="menulink" onmouseover="window.status='Search'; return true" onmouseout="window.status=''">GO</a></span><br><span class="menu"><a href="/search.html" class="menulink" onmouseover="window.status='Power Search'; return true" onmouseout="window.status=''">POWER SEARCH</a></span>
 </form>
 <hr color="#4f4f4f">
 <span class="menu">
-         COMMUNITY<br><img src="/pics/bullet_blokje.gif" width="4" height="12" border="0"><a href="http://submit.hsyndicate.com/hn.html" target="inspect" class="menulink" onmouseover="window.status='Register'; return true" onmouseout="window.status=''">REGISTER</a><br><img src="/pics/bullet_blokje.gif" width="4" height="12" border="0"><a href="http://submit.hsyndicate.com/hn.html" target="inspect" class="menulink" onmouseover="window.status='Update Registration'; return true" onmouseout="window.status=''">UPDATE REGISTRATION</a><br><img src="/pics/bullet_blokje.gif" width="4" height="12" border="0"><a href="http://www.hsyndicate.com/mediakit/146000320.html" target="inspect" class="menulink" onmouseover="window.status='Post Content'; return true" onmouseout="window.status=''">POST CONTENT</a><br></span><hr color="#4f4f4f">
+         COMMUNITY<br><img src="/pics/bullet_blokje.gif" width="4" height="12" border="0"><a href="http://submit.hsyndicate.com/hn.html" target="inspect" class="menulink" onmouseover="window.status='Register'; return true" onmouseout="window.status=''">NEWSLETTER</a><br><img src="/pics/bullet_blokje.gif" width="4" height="12" border="0"><a href="http://submit.hsyndicate.com/hn.html" target="inspect" class="menulink" onmouseover="window.status='Register'; return true" onmouseout="window.status=''">REGISTER</a><br><img src="/pics/bullet_blokje.gif" width="4" height="12" border="0"><a href="http://submit.hsyndicate.com/hn.html" target="inspect" class="menulink" onmouseover="window.status='Update Registration'; return true" onmouseout="window.status=''">UPDATE REGISTRATION</a><br><img src="/pics/bullet_blokje.gif" width="4" height="12" border="0"><a href="/post.html" class="menulink" onmouseover="window.status='Post/Submit Content'; return true" onmouseout="window.status=''">POST/SUBMIT CONTENT</a><br></span><hr color="#4f4f4f">
 <span class="menu">
          ALLIANCES<br><img src="/pics/bullet_blokje.gif" width="4" height="12" border="0"><a href="/organization/17001120.html" class="menulink" onmouseover="window.status='AH&amp;LA'; return true" onmouseout="window.status=''">AH&amp;LA</a><br><img src="/pics/bullet_blokje.gif" width="4" height="12" border="0"><a href="/organization/17000749.html" class="menulink" onmouseover="window.status='IH&amp;RA'; return true" onmouseout="window.status=''">IH&amp;RA</a><br><img src="/pics/bullet_blokje.gif" width="4" height="12" border="0"><a href="/organization/17001014.html" class="menulink" onmouseover="window.status='HSMAI'; return true" onmouseout="window.status=''">HSMAI</a><br><img src="/pics/bullet_blokje.gif" width="4" height="12" border="0"><a href="/organization/17004206.html" class="menulink" onmouseover="window.status='HFTP'; return true" onmouseout="window.status=''">HFTP</a><br><img src="/pics/bullet_blokje.gif" width="4" height="12" border="0"><a href="http://online.hitec.org/" target="inspect" class="menulink" onmouseover="window.status='HITEC'; return true" onmouseout="window.status=''">HITEC</a><br><img src="/pics/bullet_blokje.gif" width="4" height="12" border="0"><a href="http://www.hotelschools.com" target="inspect" class="menulink" onmouseover="window.status='Hotelschools.com'; return true" onmouseout="window.status=''">HOTELSCHOOLS.COM</a><br><img src="/pics/bullet_blokje.gif" width="4" height="12" border="0"><a href="http://www.wiredhotelier.com" target="inspect" class="menulink" onmouseover="window.status='WiredHotelier.com'; return true" onmouseout="window.status=''">WIREDHOTELIER.COM</a><br></span><hr color="#4f4f4f">
-<span class="menu"><a href="/contact.html" class="menulink" onmouseover="window.status='Contact Us'; return true" onmouseout="window.status=''">CONTACT US</a><br><a href="http://www.hsyndicate.com/mediakit/146000320.html" target="inspect" class="menulink" onmouseover="window.status='Advertising'; return true" onmouseout="window.status=''">ADVERTISING</a><br><a href="http://www.hsyndicate.com/mediakit/146000320.html" target="inspect" class="menulink" onmouseover="window.status='Mediakit'; return true" onmouseout="window.status=''">MEDIAKIT</a><br></span><hr color="#4f4f4f">
+<span class="menu"><a href="/contact.html" class="menulink" onmouseover="window.status='Contact Us'; return true" onmouseout="window.status=''">CONTACT US</a><br><a href="/post.html" class="menulink" onmouseover="window.status='Advertising'; return true" onmouseout="window.status=''">ADVERTISING</a><br><a href="http://www.hsyndicate.com/mediakit/146000320.html" target="inspect" class="menulink" onmouseover="window.status='Mediakit'; return true" onmouseout="window.status=''">MEDIAKIT</a><br></span><hr color="#4f4f4f">
 </td>
 </tr></tbody></table>
 </div></td>
@@ -209,7 +218,7 @@ google_ad_client = "pub-1148962932778150";
 google_ad_width = 470;
 google_ad_height = 280;
 google_ad_format = "336x280_as";
-google_ad_channel ="";
+google_ad_channel ="1584944881";
 google_color_border = "CCCCCC";
 google_color_bg = "FFFFFF";
 google_color_link = "000000";
@@ -228,10 +237,10 @@ google_color_text = "333333";
 <td width="30"></td>
 <td valign="middle" class="tabeldata">
 <img src="/pics/dot.gif" width="5" height="5" border="0"><br>
-       Copyright© 1995-2004 Hospitality Net™. All rights reserved.<br>
+       Copyright© 1995-2006 Hospitality Net™ All rights reserved.<br>
        Trademarks and product names are the property of their respective owners.<br><a href="/privacy.html" class="footer" onmouseover="window.status='Privacy Statement'; return true" onmouseout="window.status=''">Privacy Statement</a> -
        <a href="/terms.html" class="footer" onmouseover="window.status='Terms &amp; Conditions'; return true" onmouseout="window.status=''">Terms &amp; Conditions</a> -
-       <a href="http://www.hsyndicate.com/mediakit/146000320.html" target="inspect" class="footer" onmouseover="window.status='Advertising Information'; return true" onmouseout="window.status=''">Advertising Information</a><br><img src="/pics/dot.gif" width="5" height="5" border="0">
+       <a href="/post.html" class="footer" onmouseover="window.status='Advertising Information'; return true" onmouseout="window.status=''">Advertising Information</a><br><img src="/pics/dot.gif" width="5" height="5" border="0">
 </td>
 <td valign="middle" align="center" width="110"><a href="http://www.hsyndicate.com" target="inspect"><img src="/pics/powered.gif" width="105" height="27" border="0"></a></td>
 </tr></tbody></table>
@@ -239,18 +248,30 @@ google_color_text = "333333";
 <a href="/search.html" alt="Search" onmouseover="window.status='Search'; return true" onmouseout="window.status=''"><img src="/pics/buttons/b_search.gif" width="51" height="16" border="0"></a><a href="/sitemap.html" alt="Site Map" onmouseover="window.status='Site Map'; return true" onmouseout="window.status=''"><img src="/pics/buttons/b_sitemap.gif" width="56" height="16" border="0"></a><a href="mailto:info@hospitalitynet.org" alt="Comments" onmouseover="window.status='Comments'; return true" onmouseout="window.status=''"><img src="/pics/buttons/b_comments.gif" width="72" height="16" border="0"></a><a href="/index.html" alt="Home" onmouseover="window.status='Home'; return true" onmouseout="window.status=''"><img src="/pics/buttons/b_home.gif" width="42" height="16" border="0"></a><a href="#top" alt="Top of Page" onmouseover="window.status='Top of Page'; return true" onmouseout="window.status=''"><img src="/pics/buttons/b_top.gif" width="16" height="16" border="0" alt="TOP of page"></a>
 </td></tr></tbody></table>
 </td>
+<td valign="top" align="left" width="18"><img src="/pics/dot.gif" width="12" height="1" border="0"></td>
+<td valign="top" bgcolor="#625a5a" width="176"><div id="object1" align="center" style="height:605; padding-left: 8px; padding-top: 8px; position:absolute; visibility:show; top:0px; z-index:2;">
 <script language="javascript">
-    if ((screen.width>=950))
-    {
-     document.write('<td valign=\"top\" align=\"left\" width=\"18\"><img src=\"/pics/dot.gif\" width=\"12\" height=\"1\" border=\"0\"/></td>' );
-     document.write('<td valign=\"top\" bgcolor=\"#625a5a\">' );
-     document.write('<iframe id=\"right\" name=\"right\" frameborder=\"0\" scrolling=\"no\" width=\"176\" height=\"100%\" src=\"/sidebar.html\"></iframe>' );
-     document.write('</td>' );
-    }
-   </script>
+<!--
+google_ad_client = "pub-1148962932778150";
+google_ad_width = 160;
+google_ad_height = 600;
+google_ad_format = "160x600_as";
+google_ad_type = "text";
+google_ad_channel ="9103765090";
+google_color_border = "625a5a";
+google_color_bg = "625a5a";
+google_color_link = "cccccc";
+google_color_url = "ffffff";
+google_color_text = "cccccc";
+//-->
+</script><script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+</div></td>
 </tr></tbody></table>
 </div>
-<p></p>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script><script type="text/javascript">
+ _uacct = "UA-304910-1";
+ urchinTracker();
+</script><p></p>
 
 
 </body></html>
