accessmedicine.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 4291,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.82,
  "homepage_snapshot_redirected_domain": "accessmedicine.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060331183409id_/http://www.accessmedicine.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060331183409id_/http%3A//accessmedicine.com",
  "interval": "2006_A",
  "link_text": "Privacy Notice",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "accessmedicine.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615044126id_/http%3A//www.accessmedicine.com/public/privacy.aspx",
  "policy_title": "AccessMedicine - Privacy",
  "policy_url": "accessmedicine.com/public/privacy.aspx",
  "sha1": "2b4c159dc4a09e38101ce127eac8009170782325",
  "simhash": 6821617052370906045,
  "simhash_updated": true,
  "site_hostname": "accessmedicine.com",
  "site_url": "http://accessmedicine.com",
  "smog": 14.36,
  "strict_updated": true,
  "timestamp": "20060615044126",
  "word_count": 715,
  "year": 2006
}

--- a/a/ac/acc/accessmedicine.com.html
+++ b/a/ac/acc/accessmedicine.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the accessmedicine.com privacy policy that was archived on 2005-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051220064552id_/http%3A//www.accessmedicine.com/public/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the accessmedicine.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615044126id_/http%3A//www.accessmedicine.com/public/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 		<title>AccessMedicine - Privacy</title>
@@ -140,7 +140,7 @@
 	<tbody><tr><td><br class="Spacer8"><table border="0" width="100%" height="1" cellpadding="0" cellspacing="0" id="Table1"><tbody><tr><td width="100%" height="1" bgcolor="#cccccc"></td></tr></tbody></table><br class="Spacer8"></td></tr>
 	<tr>
 		<td valign="top">
-			<font class="font10">Copyright ©2004-2005 The McGraw-Hill Companies.&nbsp;&nbsp;All rights reserved.<br>
+			<font class="font10">Copyright ©2006 The McGraw-Hill Companies.&nbsp;&nbsp;All rights reserved.<br>
 			<a href="/public/privacy.aspx">Privacy Notice</a>.&nbsp;Any use is subject to the <a href="/public/termsofuse.aspx">Terms of Use</a> and <a href="/public/notice.aspx">Notice</a>.&nbsp;&nbsp;<a href="/public/additionalcredits.aspx">Additional Credits and Copyright Information</a>.</font><br><br class="Spacer8">
 			<table border="0" width="100%" cellpadding="0" cellspacing="0">
 				<tbody><tr>
