csaa.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 2263,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.15,
  "homepage_snapshot_redirected_domain": "csaa.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060404094933id_/http://www.csaa.com/home/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402205021id_/http%3A//csaa.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "csaa.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615044209id_/http%3A//www.csaa.com/global/privacypolicy/0%2C1406%2C%2C00.html",
  "policy_title": "AAA : Privacy Policy",
  "policy_url": "csaa.com/global/privacypolicy/0,1406,,00.html",
  "sha1": "3db9fcdae528cdfe941705e183d47867e60ad524",
  "simhash": 9428200992910757569,
  "simhash_updated": false,
  "site_hostname": "csaa.com",
  "site_url": "http://csaa.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615044209",
  "word_count": 365,
  "year": 2006
}

--- a/c/cs/csa/csaa.com.html
+++ b/c/cs/csa/csaa.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the csaa.com privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218195136id_/http%3A//www.csaa.com/global/privacypolicy/0%2C1406%2C%2C00.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the csaa.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615044209id_/http%3A//www.csaa.com/global/privacypolicy/0%2C1406%2C%2C00.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>AAA : Privacy Policy </title>  
@@ -28,6 +28,8 @@
 		<!--
 		
 			chkCSAACookie();
+		
+					//setSurvey('http://www.csaa.com/global/surveyinvitation/0,1848,,00.html','365','410','20','YES')
 		
 		var time = new Date();	  
 		var randnum= (time.getTime());
@@ -102,7 +104,7 @@ hbx.fnl="";//FUNNELS
 							<td width="72"><a href="http://www.csaa.com/contactus/contactus/0,1513,1009000000,00.html" onmouseover="swapImg('contactBtn', 'contactBtn_rol');" onmouseout="swapImg('contactBtn', 'contactBtn_off');"><img src="http://www.csaa.com/img/global/btn_glbnav_contact.gif" width="72" height="11" alt="ContactUs" border="0" name="contactBtn"></a></td>	  
 					
 							<td width="40"><a href="http://www.csaa.com/global/help/0,1409,1007000000,00.html" onmouseover="swapImg('helpBtn', 'helpBtn_rol');" onmouseout="swapImg('helpBtn', 'helpBtn_off');"><img src="http://www.csaa.com/img/global/btn_glbnav_help.gif" width="40" height="11" alt="Help" border="0" name="helpBtn"></a></td>	  
-					<!-- Vignette V6 Sun Dec 18 11:51:36 2005 -->
+					<!-- Vignette V6 Wed Jun 14 21:42:09 2006 -->
 
 <!--INCLUDE VIRTUAL = "/global/includes/helperfunctions.asp" -->
 
@@ -235,16 +237,16 @@ hbx.fnl="";//FUNNELS
 		</tr>
 	<tr><td>
 		<table border="0" cellpadding="1" cellspacing="0" width="384" id="Table3">
-			<tbody><tr><td width="6" valign="top" nowrap="nowrap"><img src="http://search.csaa.com/img/global/grf_bullets.gif" width="3" height="9" alt="" border="0"></td>
+			<tbody><tr><td width="6" valign="top" nowrap="nowrap"><img src="http://www.csaa.com/img/global/grf_bullets.gif" width="3" height="9" alt="" border="0"></td>
 				<td width="378" valign="top" class="text10">To use physical, electronic, and procedural safeguards to protect your personal information.</td>
 				</tr>
-			<tr><td width="6" valign="top" nowrap="nowrap"><img src="http://search.csaa.com/img/global/grf_bullets.gif" width="3" height="9" alt="" border="0"></td>
+			<tr><td width="6" valign="top" nowrap="nowrap"><img src="http://www.csaa.com/img/global/grf_bullets.gif" width="3" height="9" alt="" border="0"></td>
 				<td width="378" valign="top" class="text10">To review the information security practices of companies with whom we share information.</td>
 				</tr>
-			<tr><td width="6" valign="top" nowrap="nowrap"><img src="http://search.csaa.com/img/global/grf_bullets.gif" width="3" height="9" alt="" border="0"></td>
+			<tr><td width="6" valign="top" nowrap="nowrap"><img src="http://www.csaa.com/img/global/grf_bullets.gif" width="3" height="9" alt="" border="0"></td>
 				<td width="378" valign="top" class="text10">To require our employees to keep personal information confidential.</td>
 				</tr>
-			<tr><td width="6" valign="top" nowrap="nowrap"><img src="http://search.csaa.com/img/global/grf_bullets.gif" width="3" height="9" alt="" border="0"></td>
+			<tr><td width="6" valign="top" nowrap="nowrap"><img src="http://www.csaa.com/img/global/grf_bullets.gif" width="3" height="9" alt="" border="0"></td>
 				<td width="378" valign="top" class="text10">To authorize only those employees who need personal information to perform their duties to access such information.<br><br></td>
 				</tr>
 			</tbody></table>
@@ -321,7 +323,7 @@ hbx.fnl="";//FUNNELS
 					<a href="http://www.csaa.com/aboutaaa/aaapressroom/0,1717,1008010000,00.html">Press Room</a><span class="darkgray"> | </span><a href="http://www.csaa.com/aboutaaa/careercsaa/0,1353,1008070000,00.html">Careers at CSAA</a><span class="darkgray"> | </span><a href="http://www.csaa.com/global/termsconditions/0,1399,,00.html">Terms &amp; Conditions </a><span class="darkgray"> | </span><a href="http://www.csaa.com/global/privacypolicy/0,1403,,00.html">Privacy Policy</a>
 					<!--<span class="darkgray"> | </span><a href="http://www.csaa.com/global/redirect/0,1410,,00.html?page=affiliateprogram">Affiliate Program </a>-->
 					<!-- End: Row for links of Footer  -->
-					<br><a href="http://www.csaa.com/global/copyright/0,1400,,00.html">© Copyright 1996-2005, CSAA</a><span class="darkgray"> | </span>Serving Northern California, Nevada and Utah <span class="darkgray"> | </span><a href="http://www.aaa.com/scripts/WebObjects.dll/ZipCode?stop=yes/">Other AAA Clubs</a>
+					<br><a href="http://www.csaa.com/global/copyright/0,1400,,00.html">© Copyright 1996-2006, CSAA</a><span class="darkgray"> | </span>Serving Northern California, Nevada and Utah <span class="darkgray"> | </span><a href="http://www.aaa.com/scripts/WebObjects.dll/ZipCode?stop=yes/">Other AAA Clubs</a>
 				</td>
 			</tr>
 	
