astrolis.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "entertainment",
  "char_count": 1365,
  "classifier_probability": 0.84,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.96,
  "homepage_snapshot_redirected_domain": "astrolis.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402194822id_/http://astrolis.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402194822id_/http%3A//astrolis.com",
  "interval": "2006_A",
  "link_text": "Privacy Notice",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "astrolis.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615045546id_/http%3A//www.astrolis.com/charts/privacy.php",
  "policy_title": "Astrology Charts and Free Astrology Readings",
  "policy_url": "astrolis.com/charts/privacy.php",
  "sha1": "1655deefeb91cce9eebca131e27e3fd8e0561681",
  "simhash": 12074124460188099650,
  "simhash_updated": false,
  "site_hostname": "astrolis.com",
  "site_url": "http://astrolis.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615045546",
  "word_count": 209,
  "year": 2006
}

--- a/a/as/ast/astrolis.com.html
+++ b/a/as/ast/astrolis.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the astrolis.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230120820id_/http%3A//www.astrolis.com/charts/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the astrolis.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615045546id_/http%3A//www.astrolis.com/charts/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -112,7 +112,7 @@ a{font-family:Verdana;font-size:10px;}
     <td><img src="images/lineleft.gif" border="0" alt="" width="145" height="8"></td>
   </tr>
   <tr>
-    <td class="boxText"><img src="/images/dot_arrow_b.gif" width="7" height="7"> <a href="http://www.astrolis.com/charts/index.php?cName=personality&amp;osCsid=642c14d8a369ab0612c131a2dea1c41d">Personality</a>&nbsp;(11)<br><img src="/images/dot_arrow_b.gif" width="7" height="7"> <a href="http://www.astrolis.com/charts/index.php?cName=love-romance&amp;osCsid=642c14d8a369ab0612c131a2dea1c41d">Love &amp; Romance</a>&nbsp;(4)<br><img src="/images/dot_arrow_b.gif" width="7" height="7"> <a href="http://www.astrolis.com/charts/index.php?cName=forecasts-trends&amp;osCsid=642c14d8a369ab0612c131a2dea1c41d">Forecasts &amp; Trends</a>&nbsp;(8)<br><img src="/images/dot_arrow_b.gif" width="7" height="7"> <a href="http://www.astrolis.com/charts/index.php?cName=karma-past-life&amp;osCsid=642c14d8a369ab0612c131a2dea1c41d">Karma &amp; Past Life</a>&nbsp;(6)<br><img src="/images/dot_arrow_b.gif" width="7" height="7"> <a href="http://www.astrolis.com/charts/index.php?cName=career-money&amp;osCsid=642c14d8a369ab0612c131a2dea1c41d">Career &amp; Money</a>&nbsp;(4)<br><img src="/images/dot_arrow_b.gif" width="7" height="7"> <a href="http://www.astrolis.com/charts/index.php?cName=chart-packages&amp;osCsid=642c14d8a369ab0612c131a2dea1c41d">Chart Packages</a>&nbsp;(3)<br></td>
+    <td class="boxText"><img src="/images/dot_arrow_b.gif" width="7" height="7"> <a href="http://www.astrolis.com/charts/index.php?cName=personality&amp;osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">Personality</a>&nbsp;(11)<br><img src="/images/dot_arrow_b.gif" width="7" height="7"> <a href="http://www.astrolis.com/charts/index.php?cName=love-romance&amp;osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">Love &amp; Romance</a>&nbsp;(4)<br><img src="/images/dot_arrow_b.gif" width="7" height="7"> <a href="http://www.astrolis.com/charts/index.php?cName=forecasts-trends&amp;osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">Forecasts &amp; Trends</a>&nbsp;(8)<br><img src="/images/dot_arrow_b.gif" width="7" height="7"> <a href="http://www.astrolis.com/charts/index.php?cName=karma-past-life&amp;osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">Karma &amp; Past Life</a>&nbsp;(6)<br><img src="/images/dot_arrow_b.gif" width="7" height="7"> <a href="http://www.astrolis.com/charts/index.php?cName=career-money&amp;osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">Career &amp; Money</a>&nbsp;(4)<br><img src="/images/dot_arrow_b.gif" width="7" height="7"> <a href="http://www.astrolis.com/charts/index.php?cName=chart-packages&amp;osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">Chart Packages</a>&nbsp;(3)<br></td>
   </tr>
   <tr>
     <td><img src="images/pixel_trans.gif" border="0" alt="" width="100%" height="1"></td>
@@ -142,7 +142,7 @@ a{font-family:Verdana;font-size:10px;}
     <td><img src="images/lineleft.gif" border="0" alt="" width="145" height="8"></td>
   </tr>
   <tr>
-    <td class="boxText"><table border="0" width="100%" cellspacing="0" cellpadding="1"><tbody><tr><td class="infoBoxContents" valign="top">01.</td><td class="infoBoxContents"><a href="http://www.astrolis.com/charts/product_info.php?pName=romantic-compatibility&amp;osCsid=642c14d8a369ab0612c131a2dea1c41d">Romantic Compatibility</a></td></tr><tr><td class="infoBoxContents" valign="top">02.</td><td class="infoBoxContents"><a href="http://www.astrolis.com/charts/product_info.php?pName=astrology-profile&amp;osCsid=642c14d8a369ab0612c131a2dea1c41d">Astrology Profile</a></td></tr><tr><td class="infoBoxContents" valign="top">03.</td><td class="infoBoxContents"><a href="http://www.astrolis.com/charts/product_info.php?pName=past-life&amp;osCsid=642c14d8a369ab0612c131a2dea1c41d">Past Life</a></td></tr><tr><td class="infoBoxContents" valign="top">04.</td><td class="infoBoxContents"><a href="http://www.astrolis.com/charts/product_info.php?pName=horary-reading&amp;osCsid=642c14d8a369ab0612c131a2dea1c41d">Horary Reading</a></td></tr><tr><td class="infoBoxContents" valign="top">05.</td><td class="infoBoxContents"><a href="http://www.astrolis.com/charts/product_info.php?pName=karma-reading&amp;osCsid=642c14d8a369ab0612c131a2dea1c41d">Karma Reading</a></td></tr></tbody></table></td>
+    <td class="boxText"><table border="0" width="100%" cellspacing="0" cellpadding="1"><tbody><tr><td class="infoBoxContents" valign="top">01.</td><td class="infoBoxContents"><a href="http://www.astrolis.com/charts/product_info.php?pName=romantic-compatibility&amp;osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">Romantic Compatibility</a></td></tr><tr><td class="infoBoxContents" valign="top">02.</td><td class="infoBoxContents"><a href="http://www.astrolis.com/charts/product_info.php?pName=astrology-profile&amp;osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">Astrology Profile</a></td></tr><tr><td class="infoBoxContents" valign="top">03.</td><td class="infoBoxContents"><a href="http://www.astrolis.com/charts/product_info.php?pName=past-life&amp;osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">Past Life</a></td></tr><tr><td class="infoBoxContents" valign="top">04.</td><td class="infoBoxContents"><a href="http://www.astrolis.com/charts/product_info.php?pName=horary-reading&amp;osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">Horary Reading</a></td></tr><tr><td class="infoBoxContents" valign="top">05.</td><td class="infoBoxContents"><a href="http://www.astrolis.com/charts/product_info.php?pName=karma-reading&amp;osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">Karma Reading</a></td></tr></tbody></table></td>
   </tr>
   <tr>
     <td><img src="images/pixel_trans.gif" border="0" alt="" width="100%" height="1"></td>
@@ -172,7 +172,7 @@ a{font-family:Verdana;font-size:10px;}
     <td><img src="images/lineleft.gif" border="0" alt="" width="145" height="8"></td>
   </tr>
   <tr>
-    <td align="left" class="boxText"><table width="80%"><tbody><tr><td valign="top"><a href="http://www.astrolis.com/charts/product_info.php?pName=2006-forecast&amp;osCsid=642c14d8a369ab0612c131a2dea1c41d">2006 Forecast</a></td><td valign="top" align="right"><s>$44.95</s></td></tr><tr><td colspan="2" align="right"><img src="/images/arrow.gif" border="0" width="19" height="9"> <span class="productSpecialPrice">Now only $24.95!</span></td>
+    <td align="left" class="boxText"><table width="80%"><tbody><tr><td valign="top"><a href="http://www.astrolis.com/charts/product_info.php?pName=destiny-reading&amp;osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">Destiny Reading</a></td><td valign="top" align="right"><s>$12.95</s></td></tr><tr><td colspan="2" align="right"><img src="/images/arrow.gif" border="0" width="19" height="9"> <span class="productSpecialPrice">Now only $7.77!</span></td>
 </tr>
 </tbody></table></td>
   </tr>
@@ -234,7 +234,7 @@ a{font-family:Verdana;font-size:10px;}
     <td><img src="images/lineleft.gif" border="0" alt="" width="145" height="8"></td>
   </tr>
   <tr>
-    <td class="boxText"><a href="http://www.astrolis.com/charts/product_reviews_info.php?products_id=28&amp;reviews_id=6&amp;osCsid=642c14d8a369ab0612c131a2dea1c41d">Extremely accurate ... an interesting read. ..</a><br><div align="center"><img src="images/stars_5.gif" border="0" alt="5 of 5 Stars!" title=" 5 of 5 Stars! " width="59" height="11"></div></td>
+    <td class="boxText"><a href="http://www.astrolis.com/charts/product_reviews_info.php?products_id=28&amp;reviews_id=3&amp;osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">The report that I got was unreal. It described me so well th ..</a><br><div align="center"><img src="images/stars_4.gif" border="0" alt="4 of 5 Stars!" title=" 4 of 5 Stars! " width="59" height="11"></div></td>
   </tr>
   <tr>
     <td><img src="images/pixel_trans.gif" border="0" alt="" width="100%" height="1"></td>
@@ -264,7 +264,7 @@ a{font-family:Verdana;font-size:10px;}
     <td><img src="images/lineleft.gif" border="0" alt="" width="145" height="8"></td>
   </tr>
   <tr>
-    <td class="boxText"><a href="http://www.astrolis.com/charts/contact_us.php?osCsid=642c14d8a369ab0612c131a2dea1c41d">Contact Us</a><br><a href="http://www.astrolis.com/charts/shipping.php?osCsid=642c14d8a369ab0612c131a2dea1c41d">Shipping &amp; Returns</a><br><a href="http://www.astrolis.com/charts/privacy.php?osCsid=642c14d8a369ab0612c131a2dea1c41d">Privacy Notice</a><br><a href="http://www.astrolis.com/charts/conditions.php?osCsid=642c14d8a369ab0612c131a2dea1c41d">Conditions of Use</a><br><a href="http://www.astrolis.com/charts/affiliate_info.php?osCsid=642c14d8a369ab0612c131a2dea1c41d">Affiliate Program</a><br><a href="https://www.astrolis.com/charts/affiliate_affiliate.php?osCsid=642c14d8a369ab0612c131a2dea1c41d">Affiliate Log In</a></td>
+    <td class="boxText"><a href="http://www.astrolis.com/charts/contact_us.php?osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">Contact Us</a><br><a href="http://www.astrolis.com/charts/shipping.php?osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">Shipping &amp; Returns</a><br><a href="http://www.astrolis.com/charts/privacy.php?osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">Privacy Notice</a><br><a href="http://www.astrolis.com/charts/conditions.php?osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">Conditions of Use</a><br><a href="http://www.astrolis.com/charts/affiliate_info.php?osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">Affiliate Program</a><br><a href="https://www.astrolis.com/charts/affiliate_affiliate.php?osCsid=6ed91f1b3f2d00e2d68daa58dfe06000">Affiliate Log In</a></td>
   </tr>
   <tr>
     <td><img src="images/pixel_trans.gif" border="0" alt="" width="100%" height="1"></td>
@@ -294,7 +294,7 @@ a{font-family:Verdana;font-size:10px;}
 			<td valign="top">
 			<table cellpadding="5" cellspacing="5" border="0" bgcolor="#EAEAEA" width="100%">
 			<tbody><tr class="headerNavigation"> 
-    <td><font size="1" face="Arial, Helvetica, sans-serif"><a href="http://www.astrolis.com" class="headerNavigation">Home</a> » <a href="http://www.astrolis.com/charts/index.php?osCsid=642c14d8a369ab0612c131a2dea1c41d" class="headerNavigation">Astrology Charts</a> » <a href="http://www.astrolis.com/charts/privacy.php?osCsid=642c14d8a369ab0612c131a2dea1c41d" class="headerNavigation">Privacy Notice</a></font></td>
+    <td><font size="1" face="Arial, Helvetica, sans-serif"><a href="http://www.astrolis.com" class="headerNavigation">Home</a> » <a href="http://www.astrolis.com/charts/index.php?osCsid=6ed91f1b3f2d00e2d68daa58dfe06000" class="headerNavigation">Astrology Charts</a> » <a href="http://www.astrolis.com/charts/privacy.php?osCsid=6ed91f1b3f2d00e2d68daa58dfe06000" class="headerNavigation">Privacy Notice</a></font></td>
     <td><div align="right"><font size="1" face="Arial, Helvetica, sans-serif"></font></div></td>
   </tr>
 				<tr>
@@ -346,7 +346,7 @@ This site gives users the following options for removing their information from 
             <td><table border="0" width="100%" cellspacing="0" cellpadding="2">
               <tbody><tr>
                 <td width="10"><img src="images/pixel_trans.gif" border="0" alt="" width="10" height="1"></td>
-                <td align="right"><a href="http://www.astrolis.com/charts/index.php?osCsid=642c14d8a369ab0612c131a2dea1c41d"><img src="includes/languages/english/images/buttons/button_continue.gif" border="0" alt="Continue" title=" Continue " width="141" height="20"></a></td>
+                <td align="right"><a href="http://www.astrolis.com/charts/index.php?osCsid=6ed91f1b3f2d00e2d68daa58dfe06000"><img src="includes/languages/english/images/buttons/button_continue.gif" border="0" alt="Continue" title=" Continue " width="141" height="20"></a></td>
                 <td width="10"><img src="images/pixel_trans.gif" border="0" alt="" width="10" height="1"></td>
               </tr>
             </tbody></table></td>
