htmlcodetutorial.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education;informationtech",
  "char_count": 1675,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.12,
  "homepage_snapshot_redirected_domain": "htmlcodetutorial.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402212310id_/http://htmlcodetutorial.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402212310id_/http%3A//htmlcodetutorial.com",
  "interval": "2006_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "htmlcodetutorial.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615050051id_/http%3A//htmlcodetutorial.com/acustom/privacy.html",
  "policy_title": "Contact Us - HTML Code Tutorial",
  "policy_url": "htmlcodetutorial.com/acustom/privacy.html",
  "sha1": "0b27a27d6c9a66f87af5bec8f810bb4e8e8b05cd",
  "simhash": 13595399284750777059,
  "simhash_updated": false,
  "site_hostname": "htmlcodetutorial.com",
  "site_url": "http://htmlcodetutorial.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20060615050051",
  "word_count": 269,
  "year": 2006
}

--- a/h/ht/htm/htmlcodetutorial.com.html
+++ b/h/ht/htm/htmlcodetutorial.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the htmlcodetutorial.com privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214125849id_/http%3A//htmlcodetutorial.com/acustom/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the htmlcodetutorial.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615050051id_/http%3A//htmlcodetutorial.com/acustom/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd"><html><head>
 <title>Contact Us - HTML Code Tutorial</title>
@@ -20,15 +20,15 @@
 <table border="0" width="100%" cellspacing="0" cellpadding="0">
 	<tbody><tr>
 		<td valign="top" align="center">
-		<font face="Arial" size="1"><script language="javascript"><!--
-d=new Date();flash=Math.round(Math.random()*d.getTime());
-chk='E';document.cookie=chk+"="+chk+"; path=/";k=document.cookie.indexOf(chk+"="+chk,0)<0?0:1;cgi='http://servedby.netshelter.net';
-document.write('<scr'+'ipt src="'+cgi+'/serve.cgi?pid=HTMLCODETUTORIAL&g=1&m=9&j=1&k='+k+'&id='+flash+'&d=js"></scr'+'ipt>');
-// -->
-</script><script src="http://servedby.netshelter.net/serve.cgi?pid=HTMLCODETUTORIAL&amp;g=1&amp;m=9&amp;j=1&amp;k=1&amp;id=776607247108&amp;d=js"></script>
-<noscript>
-<a href="http://servedby.netshelter.net/click.cgi?pid=HTMLCODETUTORIAL&j=0&k=1&id=565949" target="_blank"><img src="http://servedby.netshelter.net/serve.cgi?pid=HTMLCODETUTORIAL&g=1&m=9&j=0&k=1&id=565949" width=728 height=90 border=0 ALT="Click to Visit"></a>
-</noscript></font>
+		<font face="Arial" size="1"><!-- BEGIN: AdSolution-Tag 4.3: Global-Code [PLACE IN HTML-HEAD-AREA!] -->
+<script type="text/javascript" language="javascript" src="http://a.as-us.falkag.net/dat/dlv/aslmain.js"></script>
+<!-- END: AdSolution-Tag 4.3: Global-Code -->
+<!-- BEGIN: AdSolution-Website-Tag 4.3 : HTML Code Tutorial / 728x90 -->
+<script language="javascript" type="text/javascript">
+Ads_kid=0;Ads_bid=0;Ads_xl=728;Ads_yl=90;Ads_xp='';Ads_yp='';Ads_xp1='';Ads_yp1='';Ads_opt=0;Ads_wrd='[KeyWord]';Ads_par='';Ads_cnturl='';
+</script>
+<script type="text/javascript" language="javascript" src="http://a.as-us.falkag.net/dat/cjf/00/13/60/14.js"></script>
+<!-- END:AdSolution-Tag 4.3 --></font>
 		</td>
 	</tr>
 </tbody></table>
@@ -75,12 +75,9 @@ document.write("<A HREF='mailto:"+username+""+at+""+domainname+"'>"+username+""+
 	<br>
 
 <br>
-<div style="font-size: 8pt; text-align: center"><a href="/acustom/">Contact Us</a>&nbsp; |&nbsp; <a href="/acustom/advertising.html">Advertise</a>&nbsp; |&nbsp; <a href="/acustom/privacy.html">Privacy Statement</a>&nbsp; |&nbsp; <a href="/help/archive.php/">HTML Help</a>&nbsp; |&nbsp; <a href="/YaBB/yabb/">Old Forum</a>
-<br><br>HTML Code Tutorial is hosted by <a href="http://www.anywherehost.com/cgi-bin/affiliates/clickthru.cgi?id=zylstra" onmouseover="window.status='http://www.anywherehost.com/';return true" onmouseout="window.status='';return true">Anywherehost</a>.&nbsp; Support is <i>phenomenal</i>. &nbsp;<a href="http://www.htmlcodetutorial.com/help/viewtopic.php?t=3221#12182">More...</a>
-<br>
-<a href="http://www.anywherehost.com/cgi-bin/affiliates/clickthru.cgi?id=zylstra" onmouseover="window.status='http://www.anywherehost.com/';return true" onmouseout="window.status='';return true"><img src="/acustom/anywherehost.gif" border="0"></a></div>
-&nbsp;
+<div style="font-size: 8pt; text-align: center"><a href="/acustom/">Contact Us</a>&nbsp; |&nbsp; <a href="/acustom/advertising.html">Advertise</a>&nbsp; |&nbsp; <a href="/acustom/privacy.html">Privacy Statement</a>&nbsp; |&nbsp; <a href="/help/archive.php/">HTML Help</a>&nbsp; |&nbsp; <a href="/YaBB/yabb/">Old Forum</a></div>
 </center>
+<br>
 
 <!-- FOOTER End -->
 <cite>Copyright 1997-2002. Content in this guide is offered freely to the public under the terms of
